assets/css/common.css
@import url('header.css');
@import url('footer.css');

@font-face {
  font-family: 'OpenSans';
  src: url('../fonts/OpenSans-Regular.woff2') format('woff2');
  font-weight: normal;
  font-display: swap;
}
@font-face {
  font-family: 'OpenSans Bold';
  src: url('../fonts/OpenSans-Bold.woff2') format('woff2');
  font-weight: bold;
  font-display: swap;
}
@font-face {
  font-family: 'Source Code Pro';
  src: url('../fonts/SourceCodePro-Regular.woff2') format('woff2');
  font-weight: normal;
  font-display: swap;
}
@font-face {
  font-family: 'Source Code Pro';
  src: url('../fonts/SourceCodePro-Bold.woff2') format('woff2');
  font-weight: bold;
  font-display: swap;
}

:root {
  --colors-white: rgba(255, 255, 255, 1);
  --colors-black: rgba(0, 0, 0, 1);
  --colors-yellow: rgba(251, 255, 215, 1);
  --colors-red: rgba(207, 60, 58, 1);
  --colors-primary: rgba(81, 152, 114, 1);
  --colors-primary-hover: rgba(81, 152, 114, 0.25);
  --colors-primary-high-contrast: rgba(81, 152, 114, 1);
  --colors-chess-board-light: rgba(227, 193, 111, 1);
  --colors-chess-board-dark: rgba(184, 139, 74, 1);
  --colors-highlight-wrong: rgba(207, 60, 58, 0.4);
}

* {
  margin: 0px;
  box-sizing: border-box;
  font-family: 'OpenSans', sans-serif;
}

h1 {
  font-family: 'OpenSans', sans-serif;
  font-weight: bold;
}

html {
  font-size: 16px;
}

.hidden {
  display: none !important;
}

.flipped {
  rotate: 180deg !important;
  svg {
    rotate: 180deg !important;
  }
  .square[data-square='a1'] {
    &.show-hint {
      &::before {
        rotate: 180deg;
        transform: translateY(-10%) !important;
      }
    }
  }
  .square[data-square='h8'] {
    &.show-hint {
      &::before {
        rotate: 180deg;
        transform: translateY(-5%) !important;
      }
    }
  }
}

.desktop-only {
  display: none;
}

input[type='checkbox'] {
  width: 25px;
  height: 25px;
}

#toast {
  position: fixed;
  left: 50%;
  transform: translate(-50%, 0px);
  bottom: 60px;
  padding: 10px 20px;
  opacity: 1;
  background-color: var(--colors-yellow);
  border: 1px solid color-mix(in srgb, var(--colors-yellow) 20%, var(--colors-black));
  color: color-mix(in srgb, var(--colors-yellow) 20%, var(--colors-black));
  border-radius: 10px;
  transition: all 200ms ease-in-out;
  text-align: center;

  &.toast-hidden {
    transform: translate(-50%, 40px);
    opacity: 0;
    transition: all 100ms ease-in-out;
  }
}

@media (min-width: 1060px) {
  .mobile-only {
    display: none !important;
  }
  .desktop-only {
    display: block;
  }
}

